# wandertag-app

./: .env.example  .gitignore  Cargo.toml  README.md  app.js  app.webmanifest  diesel.toml  docker-compose.yml  index.html  paths.json  secret.html  secret.js  serviceworker.js  styles.css  tracking.html  tracking.js
docker/dev-webserver/: Dockerfile
src/: db.rs  error_handler.rs  main.rs
src/database/: schema.rs
src/database/migrations/2020-03-09-134857_create_datapoints/: down.sql  up.sql
src/models/: datapoint.rs  mod.rs
